virtualbox (5.1.0~BETA3-dfsg-1) UNRELEASED; urgency=medium

  * New upstream major release, patch refresh.
  * Update to qt5
  * Regenerate manpages

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Mon, 30 May 2016 12:30:24 +0200

virtualbox (5.0.24-dfsg-1) unstable; urgency=medium

  * New upstream release, patch refresh.
    - remove fix-build.patch: upstream

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Wed, 29 Jun 2016 00:51:47 +0200

virtualbox (5.0.22-dfsg-3) unstable; urgency=high

  * Fix Ubuntu build (patch already accepted upstream)
    - this should fix also older kernel builds.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Tue, 28 Jun 2016 18:29:30 +0200

virtualbox (5.0.22-dfsg-2) unstable; urgency=low

  * Switch to automatic dbg packages.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Fri, 24 Jun 2016 23:22:04 +0200

virtualbox (5.0.22-dfsg-1) unstable; urgency=medium

  * New upstream release, patch refresh.
    - drop fix-detect-gcc-5.4.patch, fix-kernel-4.7.patch,
      fix-gcc-pie.patch: upstream

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Fri, 17 Jun 2016 00:24:15 +0200

virtualbox (5.0.20-dfsg-3) unstable; urgency=medium

  [ Adam Borowski ]
  * debian/patches/fix-kernel-4.7.patch (Closes: #825819)

  [ Gianfranco Costamagna ]
  * Conflict with virtualbox-5.1
  * Upload to unstable.

  [ Mateusz Łukasik ]
  * debian/patches/fix-detect-gcc-5.4.patch:
    - Fix build failure with gcc-5.4 and 6.1 (Closes: #827193)

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Mon, 30 May 2016 12:30:24 +0200

virtualbox (5.0.20-dfsg-2) unstable; urgency=medium

  [ Guillem Jover ]
  * make LSB init script have more consistent output (Closes: #823086).

  [ Frank Mehnert ]
  * Pass -fno-pie, to avoid build failures with gcc and default pie enabled.
    (LP: #1578424)
    - debian/patches/fix-gcc-pie.patch

  [ Gianfranco Costamagna ]
  * Remove in pdf manual the update section (Closes: #823343)